--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,14 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.112.2"
+fastapi = {extras = ["standard"], version = "^0.113.0"}
 sqlalchemy = "^2.0.32"
 bcrypt = "^4.2.0"
 pyjwt = "^2.9.0"
 python-multipart = "^0.0.9"
-pywhatkit = "^5.4"
 crcmod = "^1.7"
-uvicorn = "^0.30.6"
 
 
 [build-system]
